@@ -111,6 +111,7 @@ module TACore
   require 'tacore/venue'
   require 'tacore/device'
   require 'tacore/gateway'
+  require 'tacore/app'
 
 
   class Test < Auth
